--- a/aemedge/blocks/tabs/tabs.css
+++ b/aemedge/blocks/tabs/tabs.css
@@ -12,7 +12,7 @@
   min-width: fit-content;
   font-size: 1rem;
   padding-inline: unset;
-  padding: 0 1rem;
+  padding: 0 0.75rem;
   font-weight: 500;
   text-align: center;
   text-transform: none;
